实现简单通用mapper与PageHelper

--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,15 @@
 	    <version>2.1.5</version>
 	</dependency>
 	
+	<!-- 分页功能 -->
+	<!-- https://mvnrepository.com/artifact/com.github.pagehelper/pagehelper-spring-boot-starter -->
+	<dependency>
+	    <groupId>com.github.pagehelper</groupId>
+	    <artifactId>pagehelper-spring-boot-starter</artifactId>
+	    <version>1.2.10</version>
+	</dependency>
+	
+	
 	
 	<!-- oracle -->
     <dependency>
