--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,6 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>sgindustry Maven Webapp</name>
   <url>http://maven.apache.org</url>
-  <packaging>war</packaging>
   
   <!-- 指定spring版本 -->
   <parent>
@@ -39,6 +38,11 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
+    
+    <!-- <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-security</artifactId>
+    </dependency> -->
     
     <dependency>
 		<groupId>org.springframework.boot</groupId>
@@ -104,6 +108,35 @@
 	    <artifactId>mybatis-spring-boot-starter</artifactId>
 	    <version>2.0.1</version>
 	</dependency>
+	
+	<!-- 构建Restful API -->  
+    <dependency>  
+        <groupId>io.springfox</groupId>  
+        <artifactId>springfox-swagger2</artifactId>  
+        <version>2.9.2</version>  
+    </dependency>  
+    <dependency>  
+        <groupId>io.springfox</groupId>  
+        <artifactId>springfox-swagger-ui</artifactId>  
+        <version>2.9.2</version>  
+    </dependency>
+    
+    <dependency>
+	    <groupId>org.apache.commons</groupId>
+	    <artifactId>commons-lang3</artifactId>
+	    <version>3.8.1</version>
+	</dependency>
+	
+	<!--redis 依赖-->
+    <!-- <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-data-redis</artifactId>
+    </dependency> -->
+    <!--sessions 依赖-->
+    <!-- <dependency>
+        <groupId>org.springframework.session</groupId>
+        <artifactId>spring-session-data-redis</artifactId>
+    </dependency> -->
     
   </dependencies>
   
