--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,7 @@ spring.datasource.filters=stat,wall,log4j
 spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 # \u5408\u5e76\u591a\u4e2aDruidDataSource\u7684\u76d1\u63a7\u6570\u636e  
 spring.datasource.useGlobalDataSourceStat=true
+
+
+# spring session\u4f7f\u7528\u5b58\u50a8\u7c7b\u578b\uff0cspirngboot\u9ed8\u8ba4\u5c31\u662f\u4f7f\u7528redis\u65b9\u5f0f\uff0c\u5982\u679c\u4e0d\u60f3\u7528\u53ef\u4ee5\u586bnone\u3002\u5728\u8fd9\u76ee\u524d\u4e0d\u4f7f\u7528redis\uff0c\u540e\u7eed\u518d\u6dfb\u52a0
+#spring.session.store-type=none
