--- a/pom.xml
+++ b/pom.xml
@@ -124,7 +124,13 @@
     <dependency>
 	    <groupId>org.apache.commons</groupId>
 	    <artifactId>commons-lang3</artifactId>
-	    <version>3.8.1</version>
+	    </dependency>
+	
+	<!-- 简化java代码 -->
+	<dependency>
+	    <groupId>org.projectlombok</groupId>
+	    <artifactId>lombok</artifactId>
+	    <scope>provided</scope>
 	</dependency>
 	
 	<!--redis 依赖-->
