--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-server.port=8010
+# \u6307\u5b9a\u7aef\u53e3
+server.port=8080
+#\u52a0\u8f7dmybatis\u914d\u7f6e
+mybatis.config-location=classpath:mybatis-config.xml
 ##########################  oracle   ##########################
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
 spring.datasource.username=cims
